Fix the startup script files in the bin folder